--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
 
 <head>
@@ -33,8 +30,8 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><span id="element">ELEMENT</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -47,7 +44,7 @@
                             <a class="nav-link" href="samples.html">Samples</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -77,17 +74,12 @@
 
     <section class="footer">
         <a class="footer-link" href="https://www.facebook.com/profile.php?id=100013036694817" target="_blank">Facebook<i
-        class="fab fa-facebook"></i></a>
+                class="fab fa-facebook"></i></a>
         <a class="footer-link" href="https://twitter.com/robson_web" target="_blank">Twitter<i
-        class="fab fa-twitter"></i></a>
+                class="fab fa-twitter"></i></a>
         <a class="footer-link" href="www.linkedin.com/in/jarryd-robson-0763a649" target="_blank">LinkedIn<i
-        class="fab fa-linkedin"></i></a>
+                class="fab fa-linkedin"></i></a>
     </section>
-
-
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
     <script src="" async defer></script>
 </body>
