--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
-
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
 
 <head>
@@ -26,14 +35,17 @@
 </head>
 
 <body>
+    <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
     <section class="navigation">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><span id="element">ELEMENT</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -43,10 +55,10 @@
                             <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="samples.html">Samples</a>
+                            <a class="nav-link" href="samples.html">Samples</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -55,26 +67,15 @@
     </section>
 
     <section>
-        <div class="samples-img">
-
+        <div class="contact-img">
+            <h2>Get In Touch</h2>
+            <a href="mailto:jayrbsn@gmail.com" target="_blank" class="btn btn-outline-dark btn-lg">Send An Email</a>
+            <!-- <p><i class="fas fa-envelope"></i></p> -->
+            <p><i class="fas fa-envelope"></i>jayrbsn@gmail.com</p>
+            <p><i class="fas fa-envelope"></i>chivyn@gmail.cm</p>
+            <p><i class="fas fa-phone"></i>083 475 0319</p>
+            <p><i class="fas fa-phone"></i>082 573 8453</p>
         </div>
-    </section>
-
-    <!-- portfolio section -->
-    <section class="samples">
-        <div class="row portfolio">
-            <div class="col-md-4">
-                <h3>Individuals</h3>
-                <a href="https://www.coachash.co.za" target="_blank"><img src="images/individuals.png" alt="Ash-website-img"></a>
-            </div>
-            <div class="col-md-4">
-                <h3>Businesses</h3>
-                <a href="https://jayrbsn.github.io/SBG/" target="_blank"><img src="images/businesses.png" alt="sbg-img"></a>
-            </div>
-            <div class="col-md-4">
-                <h3>Digital CVs</h3>
-                <a href="https://jayrbsn.github.io/Hire-Me/" target="_blank"><img src="images/CVs.png" alt="cv-img"></a>
-            </div>
     </section>
 
     <section class="footer">
